--- a/style.css
+++ b/style.css
@@ -77,6 +77,11 @@ body {
   background: #eec600;
 }
 
+.active {
+  cursor: -webkit-grabbing;
+  cursor: grabbing;
+}
+
 main {
   max-width: 1900px;
   width: 100%;
@@ -604,7 +609,7 @@ main .section23 .section3 .sidelestes .underline {
 
 main .section23 .section3 .journalists {
   width: 100%;
-  height: auto;
+  height: 510px;
   background: white;
   margin-top: auto;
   padding-bottom: 150px;
@@ -617,22 +622,24 @@ main .section23 .section3 .journalists {
   margin-top: 180px;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
+  position: relative;
+  pointer-events: none;
+  -webkit-transition: 0s ease-in;
+  transition: 0s ease-in;
 }
 
 main .section23 .section3 .journalists .journalistsCont {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
   width: 100%;
   margin-top: -100px;
-  -ms-scroll-snap-type: x proximity;
-      scroll-snap-type: x proximity;
-  overflow-x: hidden;
-  scroll-behavior: smooth;
   cursor: pointer;
+  padding: 0 70px;
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
 }
 
 main .section23 .section3 .journalists .journalistsCont .journalist {
@@ -646,7 +653,8 @@ main .section23 .section3 .journalists .journalistsCont .journalist {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  margin: 0 70px;
+  margin-right: 70px;
+  min-width: 250px;
 }
 
 main .section23 .section3 .journalists .journalistsCont .journalist .image {
@@ -714,6 +722,10 @@ main .section23 .section3 .journalists .journalistsCont .journalist p a {
 
 main .section23 .section3 .journalists .journalistsCont .journalist p a:hover {
   color: #303030;
+}
+
+main .section23 .section3 .journalists .journalistsCont .journalist:last-child {
+  margin-right: 0;
 }
 
 main .section23 .section3 .arrowSection {
@@ -1023,6 +1035,12 @@ main footer .down div {
   100% {
     -webkit-transform: translateY(0);
             transform: translateY(0);
+  }
+}
+
+@media only screen and (max-width: 1670px) {
+  main .section23 .section3 .journalists {
+    width: 1670px;
   }
 }
 
