--- a/style.css
+++ b/style.css
@@ -254,22 +254,22 @@ main .header2 .mobileMenu .bar3 {
   transition: width 0.3s ease-in-out, 0.2s opacity 0.2s ease-in-out;
 }
 
-main .mobileMenu:hover .bar1 {
+main .header2 .mobileMenu:hover .bar1 {
   width: 37px;
 }
 
-main .mobileMenu:hover .bar2hover {
+main .header2 .mobileMenu:hover .bar2hover {
   width: 25px;
 }
 
-main .mobileMenu:hover .bar3 {
+main .header2 .mobileMenu:hover .bar3 {
   width: 30px;
 }
 
 main .mobileMenuCont {
   position: absolute;
   left: 0;
-  width: 100vw;
+  width: 100%;
   height: 100vh;
   display: none;
   place-items: center;
@@ -430,9 +430,47 @@ main .section1 header .nav1 .menu .issuu a img {
   margin-left: 6px;
 }
 
-main .section1 header .nav1 .desktopMenu {
+main .section1 header .nav1 .burgerMenu {
   display: none;
   cursor: pointer;
+  height: 40px;
+  width: 37px;
+}
+
+main .section1 header .nav1 .burgerMenu div {
+  background-color: white;
+  height: 6px;
+}
+
+main .section1 header .nav1 .burgerMenu .bar1 {
+  width: 30px;
+  -webkit-transition: width 0.3s ease-in-out, opacity 0.2s ease-in-out;
+  transition: width 0.3s ease-in-out, opacity 0.2s ease-in-out;
+}
+
+main .section1 header .nav1 .burgerMenu .bar2 {
+  width: 37px;
+  margin: 7px 0;
+  -webkit-transition: width 0.3s ease-in-out 0.1s;
+  transition: width 0.3s ease-in-out 0.1s;
+}
+
+main .section1 header .nav1 .burgerMenu .bar3 {
+  width: 25px;
+  -webkit-transition: width 0.3s ease-in-out, 0.2s opacity 0.2s ease-in-out;
+  transition: width 0.3s ease-in-out, 0.2s opacity 0.2s ease-in-out;
+}
+
+main .section1 header .nav1 .burgerMenu:hover .bar1 {
+  width: 37px;
+}
+
+main .section1 header .nav1 .burgerMenu:hover .bar2hover {
+  width: 25px;
+}
+
+main .section1 header .nav1 .burgerMenu:hover .bar3 {
+  width: 30px;
 }
 
 main .section1 h1 {
@@ -1380,19 +1418,20 @@ main footer .down div {
   }
   main .section1 h1 {
     font-size: 45px;
+    top: 30%;
   }
   main .section1 .tefhos {
-    top: 100%;
-    left: 0;
-    -webkit-transform: translateY(-100%);
-            transform: translateY(-100%);
-    background-color: #000000;
-    width: 120px;
-    height: 70px;
+    max-width: 280px;
+    top: 50%;
+    left: 50%;
+    right: 0;
+    -webkit-transform: translateX(-50%);
+            transform: translateX(-50%);
   }
   main .section1 .tefhos img {
-    display: none;
-    content: url("images/issuuMobile.png");
+    content: url("images/tefhos-mobile.png");
+    width: 100%;
+    max-width: 300px;
   }
   main .section1 .section3 .sidelestes {
     -webkit-transform: translateY(0);
@@ -1461,7 +1500,7 @@ main footer .down div {
 
 @media only screen and (max-width: 500px) {
   main .section1 h1 {
-    font-size: 25px;
+    padding: 0 30px;
   }
   main .section23::after {
     top: 86%;
